[package]
name = "neutils"
version = "0.1.1"
description = "Utitlity functions"
license = "MIT"
repository = "https://github.com/nano-e/ne-utils"
readme = "../README.md"
keywords = ["rust", "utility", "networking"]
categories = ["algorithms"]
authors = ["Nano Energy <info@nano-e.org>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
rand = "~0.8"