[package]
name = "neutils"
version = "0.1.1"
description = "Utitlity functions"
license = "MIT"
repository = "https://github.com/nano-e/ne-utils"
readme = "../README.md"
keywords = ["rust", "utility", "networking"]
categories = ["algorithms"]
authors = ["Nano Energy <info@nano-e.org>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["tokio", "tokio-stream"]

[dependencies]
libc = "0.2"
cfg-if = "1"

futures = {version = "0.3"}
tokio = { version = "1.26", features = ["full"], optional = true}
tokio-stream = {version = "0.1", optional = true}

[dev-dependencies]
rand = "~0.8"


[build-dependencies]
cc = "~1"
